# Prometheus-World-Cup-Predictor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml
artifacts/: feature_schema.json
artifacts/models/: baseline.joblib  logreg.joblib  xgb.joblib
artifacts/reports/: baseline_report.json  comparison.json  logreg_report.json  rf_report.json  xgb_report.json
data/processed/: feature_matrix.csv  matches.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ModelComparison.jsx  PredictionForm.jsx  ResultsCard.jsx  TeamFlag.jsx
frontend/src/data/: team_codes.json
frontend/src/utils/: flags.js
src/wc_predictor/: __init__.py  __main__.py  api.py  build_dataset.py  config.py  download_data.py  elo.py  evaluate.py  features.py  predict.py  splits.py  train.py
tests/: test_elo.py  test_features.py  test_predict.py  test_splits.py
