[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc-predictor"
version = "1.0.0"
description = "World Cup match outcome prediction pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "requests>=2.31",
    "joblib>=1.3",
]

[project.optional-dependencies]
xgb = ["xgboost>=2.0"]
web = ["fastapi>=0.100", "uvicorn>=0.23", "slowapi>=0.1.9"]
dev = ["pytest>=7.4", "ruff>=0.1"]
all = ["xgboost>=2.0", "fastapi>=0.100", "uvicorn>=0.23", "slowapi>=0.1.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 99
target-version = "py311"
